[gd_scene load_steps=16 format=3 uid="uid://bkujpa6pbhr0f"]

[ext_resource type="Script" path="res://Player/PlayerCharacters/Player1.gd" id="1_f6g5f"]
[ext_resource type="PackedScene" uid="uid://dd2a1kvpp4ybo" path="res://Player/PlayerCharacters/Soldier/player_soldier.tscn" id="2_7vfyv"]
[ext_resource type="PackedScene" uid="uid://bw7ejrrld0u2y" path="res://Weapons/Guns/AK74.tscn" id="3_wegtr"]
[ext_resource type="PackedScene" uid="uid://dcm5fnl0wh8bb" path="res://stats.tscn" id="4_plyxm"]
[ext_resource type="Script" path="res://Player/PlayerCharacters/Camera3D.gd" id="6_a5ulj"]
[ext_resource type="PackedScene" uid="uid://cm1s07romawt1" path="res://Weapons/gun_controller.tscn" id="6_dve07"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ulqnf"]
radius = 0.65909
height = 2.5

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_17deh"]
animation = &"reload"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_83kv1"]
animation = &"run_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_78y8x"]
animation = &"shoot"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v3i6w"]
animation = &"idle"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_5t12s"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_f1eir"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_rcgha"]
input_0/name = "shoot"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "reload"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_n31k8"]
graph_offset = Vector2(-233.619, -243.646)
nodes/Animation/node = SubResource("AnimationNodeAnimation_v3i6w")
nodes/Animation/position = Vector2(100, -420)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_17deh")
"nodes/Animation 2/position" = Vector2(-200, -80)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_83kv1")
"nodes/Animation 3/position" = Vector2(340, -60)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_78y8x")
"nodes/Animation 4/position" = Vector2(-200, -240)
nodes/anim_shoot_shot/node = SubResource("AnimationNodeOneShot_5t12s")
nodes/anim_shoot_shot/position = Vector2(400, -420)
nodes/iwr_blend/node = SubResource("AnimationNodeBlend2_f1eir")
nodes/iwr_blend/position = Vector2(640, -260)
nodes/output/position = Vector2(860, -160)
nodes/transition_shoot_reload/node = SubResource("AnimationNodeTransition_rcgha")
nodes/transition_shoot_reload/position = Vector2(120, -200)
node_connections = [&"anim_shoot_shot", 0, &"Animation", &"anim_shoot_shot", 1, &"transition_shoot_reload", &"iwr_blend", 0, &"anim_shoot_shot", &"iwr_blend", 1, &"Animation 3", &"output", 0, &"iwr_blend", &"transition_shoot_reload", 0, &"Animation 4", &"transition_shoot_reload", 1, &"Animation 2"]

[node name="Player1" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_f6g5f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -0.119507, 12.6152, 0.0906981)
shape = SubResource("CapsuleShape3D_ulqnf")

[node name="soldier" parent="." instance=ExtResource("2_7vfyv")]
transform = Transform3D(-0.151019, 0, -1.32025e-08, 0, 0.151019, 0, 1.32025e-08, 0, -0.151019, 0, 0, 0)

[node name="Skeleton3D" parent="soldier/Armature" index="0"]
bones/0/position = Vector3(-0.300648, 0.392276, -101.464)
bones/0/rotation = Quaternion(-0.738956, -0.258827, 0.222772, 0.580797)
bones/1/rotation = Quaternion(-0.00345927, 0.000228088, -0.000943045, 0.999994)
bones/2/rotation = Quaternion(0.144002, 0.000270023, -0.00656126, 0.989556)
bones/3/rotation = Quaternion(0.214905, -0.00065598, -0.0084309, 0.976598)
bones/4/rotation = Quaternion(0.00402689, 0.0651881, 0.00757438, 0.997836)
bones/5/rotation = Quaternion(-0.0392269, 0.1918, 0.0902558, 0.976488)
bones/7/rotation = Quaternion(0.388662, 0.237549, -0.631458, 0.627513)
bones/8/position = Vector3(2.49899e-06, 14.4488, -1.63674e-05)
bones/8/rotation = Quaternion(0.365755, -0.249555, 0.257432, 0.85888)
bones/9/position = Vector3(-4.03809e-06, 23.1603, -6.72359e-06)
bones/9/rotation = Quaternion(-3.33458e-07, 1.32036e-07, 0.537076, 0.843534)
bones/10/position = Vector3(2.9388e-07, 24.0717, 4.09211e-06)
bones/10/rotation = Quaternion(-0.133644, -0.827664, -0.246445, 0.486186)
bones/11/rotation = Quaternion(0.205609, 0.101263, 0.164699, 0.959346)
bones/12/position = Vector3(-4.77133e-07, 3.87038, 4.06051e-06)
bones/12/rotation = Quaternion(0.0304726, 0.169034, -0.0571027, 0.983483)
bones/13/position = Vector3(7.92701e-06, 4.71064, -2.77833e-05)
bones/13/rotation = Quaternion(-0.0365702, 0.0130983, 0.0855509, 0.995576)
bones/14/position = Vector3(5.126e-06, 3.83035, 1.24574e-05)
bones/15/rotation = Quaternion(0.31524, -0.0126332, -0.0318624, 0.948393)
bones/16/position = Vector3(6.08477e-06, 3.24861, -7.47927e-06)
bones/16/rotation = Quaternion(0.49947, 2.04611e-08, -0.0511854, 0.864818)
bones/17/position = Vector3(-1.12802e-06, 2.65959, -3.58134e-06)
bones/17/rotation = Quaternion(0.209055, -4.50102e-08, -0.0214241, 0.977669)
bones/18/position = Vector3(-8.01302e-08, 3.6332, 4.04807e-07)
bones/19/rotation = Quaternion(0.440623, -0.0180651, -0.0445193, 0.896406)
bones/20/rotation = Quaternion(0.535856, 1.90082e-07, -0.0549142, 0.842522)
bones/21/rotation = Quaternion(0.154933, 1.42721e-07, -0.0158772, 0.987797)
bones/23/rotation = Quaternion(0.506512, -0.0259682, -0.0426194, 0.860787)
bones/24/position = Vector3(4.84698e-07, 2.71765, 2.47772e-07)
bones/24/rotation = Quaternion(0.586004, -1.26775e-07, -0.0600535, 0.80808)
bones/25/position = Vector3(5.77046e-07, 2.13447, 4.04995e-06)
bones/25/rotation = Quaternion(0.222639, 6.40225e-08, -0.0228163, 0.974634)
bones/26/position = Vector3(4.873e-07, 2.78689, 1.23069e-06)
bones/27/position = Vector3(5.61422, 11.6364, 0.516562)
bones/27/rotation = Quaternion(0.59075, -0.0695706, 0.00202617, 0.803847)
bones/28/position = Vector3(1.88716e-06, 1.55936, 7.33314e-06)
bones/28/rotation = Quaternion(0.528814, 2.72688e-07, -0.0541925, 0.847006)
bones/29/position = Vector3(-9.89691e-06, 1.54061, 6.50916e-06)
bones/29/rotation = Quaternion(0.122178, -9.61888e-09, -0.012521, 0.992429)
bones/30/position = Vector3(-1.57995e-06, 1.66872, 1.71494e-05)
bones/31/rotation = Quaternion(0.284407, -0.295943, 0.696569, 0.588491)
bones/32/position = Vector3(-3.28901e-06, 14.4488, 8.50508e-06)
bones/32/rotation = Quaternion(0.41956, -0.182144, -0.533313, 0.711597)
bones/33/position = Vector3(-5.19412e-06, 23.1603, 7.61443e-06)
bones/33/rotation = Quaternion(-4.73686e-07, -1.5865e-07, -0.757252, 0.653122)
bones/34/position = Vector3(-1.21551e-07, 24.0717, -6.63992e-07)
bones/34/rotation = Quaternion(-0.159096, 0.386894, 0.241427, 0.875622)
bones/35/position = Vector3(1.50903, 4.1734, 1.927)
bones/35/rotation = Quaternion(0.325103, -0.0979784, -0.196857, 0.919759)
bones/36/position = Vector3(-3.09944e-06, 3.87043, -1.53184e-05)
bones/36/rotation = Quaternion(-0.0507377, -0.187553, 0.233572, 0.95273)
bones/37/position = Vector3(9.95402e-06, 4.71033, 1.56608e-05)
bones/37/rotation = Quaternion(-0.151351, -0.0182449, 0.466367, 0.871356)
bones/38/position = Vector3(-2.38418e-06, 3.83035, -2.99215e-05)
bones/39/rotation = Quaternion(0.108494, 0.00640389, -0.0156386, 0.993954)
bones/40/position = Vector3(-5.42405e-06, 3.24859, 1.54501e-07)
bones/40/rotation = Quaternion(0.28301, 4.67673e-07, 0.0223097, 0.958858)
bones/41/position = Vector3(8.8526e-06, 2.65961, 3.16561e-06)
bones/41/rotation = Quaternion(0.256754, -2.74694e-07, 0.0202398, 0.966265)
bones/42/position = Vector3(2.1137e-05, 3.63309, -2.44014e-06)
bones/43/rotation = Quaternion(0.432855, 0.000556314, 0.0681438, 0.898884)
bones/44/position = Vector3(4.83152e-06, 3.25909, -3.44893e-07)
bones/44/rotation = Quaternion(0.819472, -5.1824e-07, 0.0645977, 0.569467)
bones/45/rotation = Quaternion(0.163234, 5.20415e-08, 0.0128675, 0.986504)
bones/46/position = Vector3(9.53188e-06, 3.6739, -7.95347e-07)
bones/47/position = Vector3(-3.30497, 13.1915, -0.322001)
bones/47/rotation = Quaternion(0.477511, 0.0365066, 0.00472214, 0.877854)
bones/48/position = Vector3(1.94535e-06, 2.71759, 1.27823e-06)
bones/48/rotation = Quaternion(0.761882, -1.89599e-07, 0.0600581, 0.644926)
bones/49/position = Vector3(-1.57314e-07, 2.1345, -1.19344e-08)
bones/49/rotation = Quaternion(0.425151, -2.85661e-07, 0.0335141, 0.904502)
bones/50/position = Vector3(4.25019e-06, 2.78681, 6.06005e-07)
bones/51/rotation = Quaternion(0.534624, 0.0448661, 0.00431449, 0.843887)
bones/52/position = Vector3(-1.51391e-06, 1.55931, -2.39394e-07)
bones/52/rotation = Quaternion(0.6582, -3.72006e-08, 0.0518851, 0.751053)
bones/53/rotation = Quaternion(0.497487, 1.93447e-08, 0.0392163, 0.866584)
bones/54/position = Vector3(-1.53171e-05, 1.6687, -5.41015e-07)
bones/55/rotation = Quaternion(0.0479742, -0.0206096, 0.997452, 0.0486175)
bones/56/rotation = Quaternion(-0.322691, 0.00532153, 0.00822454, 0.946454)
bones/57/rotation = Quaternion(0.587707, 0.204382, -0.0358609, 0.782012)
bones/58/rotation = Quaternion(0.3549, 0.0338235, 0.00432134, 0.934282)
bones/60/rotation = Quaternion(0.392162, 0.087316, 0.902508, -0.15513)
bones/61/rotation = Quaternion(-0.252663, -0.00716349, -0.004917, 0.967515)
bones/62/rotation = Quaternion(0.428536, -0.0587764, 0.0356337, 0.900907)
bones/63/rotation = Quaternion(0.354872, -0.0338184, -0.00432403, 0.934293)

[node name="RightHand" parent="soldier/Armature/Skeleton3D" index="2"]
transform = Transform3D(-0.0987654, 0.0266331, 0.994754, -0.0990253, 0.994417, -0.0364558, -0.990171, -0.102106, -0.0955766, -17.2986, 14.1355, -139.816)

[node name="Stats" parent="." instance=ExtResource("4_plyxm")]
max_HP = 10

[node name="GunController" parent="." instance=ExtResource("6_dve07")]
starting_weapon = ExtResource("3_wegtr")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../soldier")
tree_root = SubResource("AnimationNodeBlendTree_n31k8")
anim_player = NodePath("../soldier/AnimationPlayer")
parameters/anim_shoot_shot/active = false
parameters/anim_shoot_shot/internal_active = false
parameters/anim_shoot_shot/request = 0
parameters/iwr_blend/blend_amount = 0.0
parameters/transition_shoot_reload/current_state = "shoot"
parameters/transition_shoot_reload/transition_request = ""
parameters/transition_shoot_reload/current_index = 0

[node name="Camera_Controller" type="Node3D" parent="."]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)
top_level = true

[node name="Camera_target" type="Node3D" parent="Camera_Controller"]
transform = Transform3D(1, 0, 0, 0, 0.587785, 0.809017, 0, -0.809017, 0.587785, 6.1196e-07, 80.7844, 51.1347)

[node name="Camera3D" type="Camera3D" parent="Camera_Controller/Camera_target"]
current = true
script = ExtResource("6_a5ulj")
max_shake_strength = 0.25
shake_fallout = 5.0

[node name="Camera_Controller2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)
top_level = true

[node name="Camera_target" type="Node3D" parent="Camera_Controller2"]
transform = Transform3D(0.943861, 0.205208, -0.258875, -0.0479111, 0.860406, 0.507351, 0.326851, -0.466466, 0.821935, 0.744995, 28.9503, 10.5908)

[node name="Camera3D" type="Camera3D" parent="Camera_Controller2/Camera_target"]
script = ExtResource("6_a5ulj")
max_shake_strength = 0.25
shake_fallout = 5.0

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 32.4453, 0)
visible = false

[connection signal="dead_signal" from="Stats" to="." method="_on_stats_dead_signal"]

[editable path="soldier"]
